[workspace]

members = [
    "bw6",
    "mipp",
]

[patch.crates-io]
ark-std = { git = "https://github.com/arkworks-rs/std" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }