[package]
name = "apk-proofs"
version = "0.1.0"
authors = ["Sergey Vasilyev <swasilyev@gmail.com>"]
edition = "2018"
description = "Succinct proofs of a BLS public key being an aggregate key of a subset of signers given a commitment to the set of all signers' keys"
repository = "https://github.com/w3f/apk-proofs"
categories = ["cryptography"]

[dependencies]
ark-ff = { version = "0.3", default-features = false }
ark-ec = { version = "0.3", default-features = false }
ark-serialize = { version = "0.3", default-features = false, features = ["derive"] }
ark-bls12-377 = { git = "https://github.com/arkworks-rs/curves", version = "0.3", default-features = false, features = ["curve"] }
ark-bw6-761 = { git = "https://github.com/arkworks-rs/curves", version = "0.3", default-features = false }
ark-std = { version = "0.3", default-features = false }
ark-poly = { version = "0.3", default-features = false }
fflonk = { git = "https://github.com/w3f/fflonk" }

rand = "0.8"
merlin = "3.0"
blake2 = "0.9"
rayon = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[[example]]
name = "recursive"

[[test]]
name = "basic"
harness = false

[features]
print-trace = ["ark-std/print-trace"]
std = ["ark-ff/std", "ark-ec/std", "ark-serialize/std", "ark-std/std", "ark-poly/std"]
parallel = ["std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "ark-poly/parallel", "fflonk/parallel", "rayon"]