[package]
name = "apk-proofs"
version = "0.1.0"
authors = ["Sergey Vasilyev <swasilyev@gmail.com>"]
edition = "2018"
description = "Succinct proofs of a BLS public key being an aggregate key of a subset of signers given a commitment to the set of all signers' keys"
repository = "https://github.com/w3f/apk-proofs"
categories = ["cryptography"]

[dependencies]
ark-std = { git = "https://github.com/arkworks-rs/std", default-features = false }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false, rev = "402e7f9" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false, rev = "402e7f9" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false, rev = "402e7f9" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = ["derive"], rev = "402e7f9" }

ark-bw6-761 = { git = "https://github.com/arkworks-rs/curves", default-features = false }
ark-bls12-377 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"] }

fflonk = { git = "https://github.com/w3f/fflonk" }

rand = "0.8"
merlin = "3.0"
blake2 = "0.9"
rayon = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[[example]]
name = "recursive"

[[test]]
name = "basic"
harness = false

[[test]]
name = "packed"
harness = false

[[test]]
name = "counting"
harness = false

[features]
default = []
std = ["ark-std/std", "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-serialize/std"]
parallel = ["std", "ark-std/parallel", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "fflonk/parallel", "rayon"]
print-trace = ["ark-std/print-trace"]