[package]
name = "bls-mipp"
version = "0.1.0"
authors = ["swasilyev <swasilyev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", features = [ "curve" ] }
ark-inner-products = { git = "https://github.com/arkworks-rs/ripp" }
ark-ip-proofs = { git = "https://github.com/arkworks-rs/ripp" }
ark-dh-commitments = { git = "https://github.com/arkworks-rs/ripp" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", features = [ "parallel" ] }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", features = [ "parallel" ] }
blake2 = { version = "0.9" }
bitvec = { version = "0.19", default-features = false, features = [ "alloc" ] }
rand = "0.7"