[package]
name = "bls-mipp"
version = "0.1.0"
authors = ["swasilyev <swasilyev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-inner-products = { git = "https://github.com/w3f/ripp", branch = "tipa-verify-unfolded" }
ark-ip-proofs = { git = "https://github.com/w3f/ripp", branch = "tipa-verify-unfolded" }
ark-dh-commitments = { git = "https://github.com/w3f/ripp", branch = "tipa-verify-unfolded" }

ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", features = [ "curve" ] }

bench-utils = { git = "https://github.com/arkworks-rs/utils" }

blake2 = { version = "0.9" }
rand = "0.7"

[features]
print-trace = [ "bench-utils/print-trace" ]
parallel = [ "ark-ff/parallel", "ark-ec/parallel" ]